--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "windicss",
-  "version": "3.0.0-beta.13",
+  "version": "3.0.0",
   "description": "Next generation utility-first CSS framework.",
   "main": "index.js",
   "module": "index.mjs",
