--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "@types/color-string": "^1.5.0",
     "@types/diff": "^5.0.0",
     "@types/fs-extra": "^9.0.10",
+    "@types/glob": "^7.1.3",
     "@types/jasmine": "^3.6.9",
     "@types/js-yaml": "^4.0.0",
     "@types/lodash.merge": "^4.6.6",
@@ -134,10 +135,12 @@
     "domhandler": "^4.1.0",
     "eslint": "^7.23.0",
     "fs-extra": "^9.1.0",
+    "glob": "^7.1.7",
     "jasmine": "^3.7.0",
     "jasmine-spec-reporter": "^6.0.0",
     "js-yaml": "^4.0.0",
     "mini-svg-data-uri": "^1.2.3",
+    "minimatch": "^3.0.4",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
     "rollup": "^2.44.0",
